my current change

--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
                         <i class="fas fa-circle fa-stack-2x text-primary"></i>
                         <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Jquery</h4>
-                    <p class="text-muted">70%</p>
+                    <h4 class="service-heading">Typescript</h4>
+                    <p class="text-muted">50%</p>
                 </div>
             </div>
             <div class="row text-center">
@@ -156,7 +156,7 @@
                         <i class="fas fa-circle fa-stack-2x text-primary"></i>
                         <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">HTML</h4>
+                    <h4 class="service-heading">MySql</h4>
                     <p class="text-muted">80%</p>
                 </div>
                 <div class="col-md-3">
@@ -164,7 +164,7 @@
                         <i class="fas fa-circle fa-stack-2x text-primary"></i>
                         <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">CSS</h4>
+                    <h4 class="service-heading">NodeJs</h4>
                     <p class="text-muted">50%</p>
                 </div>
                 <div class="col-md-3">
